# triathlon-live-calendar

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  fly.toml  pyproject.toml
.github/workflows/: quality.yml  tests.yml
tests/: test_calendar.py  test_logger.py
triathlon_live_calendar/: __init__.py  __main__.py  cache.py  calendar.py  logger.py  scraper.py  server.py
