[tool.poetry]
name = "triathlon-live-calendar"
version = "0.0.1"
description = "Calendar file generator for triathlonlive.tv upcoming events"
authors = ["Eduardo Cuducos <cuducos@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
httpx = "^0.23.3"
ics = "^0.7"
pyquery = "^2.0.0"
typer = "^0.7.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.dev-dependencies]
ipython = "^8.10.0"
pytest = "^7.2.1"
pytest-black = "^0.3.12"
pytest-mypy = "^0.10.3"
pytest-ruff = "^0.0.3"

[tool.pytest.ini_options]
addopts = "--black --ruff --mypy --mypy-ignore-missing-imports --disable-warnings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
